css/style.css
/* Import Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');


/* CSS Variables */
:root {
  --font-heading: 'Inter', sans-serif;
   --font-sans-serif: 'IBM Plex Sans', sans-serif;
  --font-mono: 'IBM Plex Sans Mono', monospace;
  --color-bg: #FBFBFB;
  --color-text: #272727;
  --color-accent: #0077ff;

  --spacing-sm: 0.5rem;
  --spacing-md: 1rem;
  --spacing-lg: 2rem;
}

/* Reset / Base Styles */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: var(--font-mono);
  background-color: var(--color-bg);
  color: var(--color-text);
}

/* Typography */

h1, h2, h3, h4 {
  font-family: var(--font-heading);
  font-weight: 900;
  margin-bottom: var(--spacing-sm);
}

/* h1 {
    font-size: 10rem;
    letter-spacing: -0.5rem;
    margin: 0;
} */

h1, h4 {
  font-size: clamp(1.5rem, 10vw, 10rem);
  letter-spacing: clamp(-0.05em, -0.5vw, -0.5rem);
  margin: 0;
}

h2 {
   font-size: clamp(1.5rem, 10vw, 20rem);
   color: var(--color-text);
}

h3 {
    /* font-size: 2rem; */
    font-size: clamp(1.5rem, 2.5vw, 2.5rem);
}

p, a, li {
  font-family: var(--font-sans-serif);
  font-size: clamp(1.3rem, 2vw, 2rem);
  margin-bottom: var(--spacing-md);
  color: inherit;
}

ul {
  list-style: none;   /* Removes bullets */
}


.no-break {
  white-space: nowrap;
}

/* Elements */

main {
    padding: var(--spacing-md);
}

header {
    min-height: 125svh;
    padding: var(--spacing-md);
    display: flex;
    flex-direction: column;
    gap: 2.5rem;
    background-image: url("/assets/Eternal-September-Crew-Neck.webp");
    background-size: cover;
    background-position: center 25%;
    background-attachment: scroll;
    color: var(--color-bg);
}

.sub-heading {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 130vh;
}

.sub-heading-copy {
    max-width: 30ch;
    letter-spacing: clamp(-0.05em, -0.5vw, -0.5rem);
    line-height: 0.9;
}


/* section {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    border-top: 1px solid var(--color-text);
    padding-top: var( --spacing-sm);
    margin-top: var(--spacing-lg);
} */

section {
    border-top: 1px solid var(--color-text);
    padding-top: var( --spacing-md);
    margin-top: var(--spacing-lg);
}


.category-copy {
    max-width: 90ch;
  }

.image-gallery {
  display: flex;
  justify-content: space-between;
  gap: 0.5rem;
}

.image-gallery img {
  width: 50%;
  height: auto;
  /* object-fit: cover; */
}

  footer {
    min-height: 100vh;
    /* background-color: red; */
    /* background-color: #058c02; */
    /* background-color: #f2d9b2; */
    background-color: #a2c6d8;
    color: var(--color-bg);
    padding: var(--spacing-md);
    display: flex;
    flex-direction: column; 
    margin-top: var(--spacing-lg);
  }


.footer-container {
    display: flex;
    justify-content: space-between;
    margin-top: auto;
    flex-wrap: wrap;
}


.footer-container p {
    font-size: 1rem;
}


.footer-container a {
    font-size: 1rem;
}


/* Mobile Break Point */
/* @media (max-width: 767px) {
  .footer-container {
    display: block;
    margin-top: auto;
}
} */

/* @media (max-width: 767px) {
  .hero-image-container {
    margin-left: inherit;
}
} */

/* @media (max-width: 767px) {
  section {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}
} */

@media (max-width: 767px) {
 .category-copy {
    max-width: none;
  }
}

@media (max-width: 767px) {
  header {
  /* min-height: 100lvh; */
  min-height: 800px;
  }
  article {
    min-height: 100vh;
  }
}

/* @media (max-width: 767px) {
.image-gallery {
  display: inline;
}
.image-gallery img {
    width: 100%
}
} */

